--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A utility to allow using SQL statements on js arrays of objects",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wp": "npx webpack"
+    "wp": "npx webpack",
+    "test": "jasmine"
   },
   "author": "Andrew Fitzgerald <andrewhfitz@gmail.com>",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/andrewf414/jsql.git"
   },
   "devDependencies": {
+    "jasmine": "^3.5.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9"
   },
