--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@fitzy/jsql",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A utility to allow using SQL statements on js arrays of objects",
   "main": "index.js",
   "scripts": {
     "wp": "npx webpack",
-    "test": "jasmine"
+    "test": "jasmine",
+    "pub": "npm publish --access public"
   },
   "author": "Andrew Fitzgerald <andrewhfitz@gmail.com>",
   "license": "MIT",
